<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/optionLayout1"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/backBtn1"
            android:background="@drawable/button_back"
            android:layout_width="300px"
            android:layout_height="300px"
            android:gravity="start">
        </ImageButton>


        <ImageButton
            android:id="@+id/setLimitBtn"
            android:layout_width="440px"
            android:layout_height="420px"
            android:layout_above="@+id/middle1"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_setgoal"></ImageButton>
        <TextView
            android:id="@+id/middle1"
            android:layout_width="match_parent"
            android:layout_height="200px"
            android:layout_centerInParent="true">
        </TextView>
        <ImageButton
            android:id="@+id/manualBtn"
            android:layout_below="@+id/middle1"
            android:layout_centerHorizontal="true"
            android:layout_width="440px"
            android:layout_height="420px"
            android:background="@drawable/button_manual">
        </ImageButton>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/optionLayout2"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/backBtn2"
            android:background="@drawable/button_back"
            android:layout_width="300px"
            android:layout_height="300px"
            android:gravity="start">
        </ImageButton>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText"
            android:layout_centerHorizontal="true"
            android:padding="40px"
            android:fontFamily="@font/pf_stardustbold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="15dp"
            android:text="소비한도를 설정해주세요!">
        </TextView>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/middle2"
            android:inputType="number"
            android:imeOptions="actionDone">
        </EditText>

        <TextView
            android:id="@+id/middle2"
            android:layout_width="match_parent"
            android:layout_height="200px"
            android:layout_centerInParent="true">
        </TextView>

        <ImageButton
            android:id="@+id/submitBtn"
            android:layout_width="300px"
            android:layout_height="300px"
            android:background="@drawable/button_update"
            android:layout_below="@+id/middle2"
            android:layout_centerInParent="true"
            >
        </ImageButton>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/optionLayout3"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/backBtn3"
            android:background="@drawable/button_back"
            android:layout_width="300px"
            android:layout_height="300px"
            android:gravity="start">
        </ImageButton>

        <ViewFlipper
            android:id="@+id/manualView"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_centerInParent="true">

            //1page

            <RelativeLayout
                android:id="@+id/manual1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/manPic1"
                    android:fontFamily="@font/pf_stardustbold"
                    android:gravity="center"
                    android:text="@string/manual"
                    android:textColor="@color/white"
                    android:textSize="18dp"></TextView>

                <ImageView
                    android:id="@+id/manPic1"
                    android:layout_width="700px"
                    android:layout_height="900px"
                    android:layout_centerInParent="true"
                    android:padding="10dp"
                    android:src="@drawable/menu_goal"></ImageView>

                <TextView
                    android:id="@+id/manTxt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/manPic1"
                    android:fontFamily="@font/pf_stardustbold"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:text="@string/manual_1"
                    android:textColor="@color/white"
                    android:textSize="18dp"></TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pf_stardustbold"
                    android:layout_below="@+id/manTxt1"
                    android:gravity="center"
                    android:text="@string/manual_11"
                    android:textColor="@color/yellow"
                    android:textSize="15dp"></TextView>

            </RelativeLayout>

            //2page
            <RelativeLayout
                android:id="@+id/manual2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/manPic2"
                    android:layout_width="700px"
                    android:layout_height="900px"
                    android:layout_centerInParent="true"
                    android:padding="10dp"
                    android:src="@drawable/menu_gacha"></ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/manTxt2"
                    android:fontFamily="@font/pf_stardustbold"
                    android:text="@string/manual_2"
                    android:textSize="18dp"
                    android:gravity="center"
                    android:layout_below="@+id/manPic2"
                    android:textColor="@color/white"
                    android:paddingBottom="10dp"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pf_stardustbold"
                    android:text="@string/manual_21"
                    android:textColor="@color/yellow"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:layout_below="@+id/manTxt2">
                </TextView>
            </RelativeLayout>

            //3page

            <RelativeLayout
                android:id="@+id/manual3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/manPic3"
                    android:layout_width="700px"
                    android:layout_height="900px"
                    android:layout_centerInParent="true"
                    android:padding="10dp"
                    android:src="@drawable/menu_gallery"></ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/manTxt3"
                    android:fontFamily="@font/pf_stardustbold"
                    android:text="@string/manual_3"
                    android:textSize="18dp"
                    android:gravity="center"
                    android:layout_below="@+id/manPic3"
                    android:textColor="@color/white"
                    android:paddingBottom="10dp"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pf_stardustbold"
                    android:text="@string/manual_31"
                    android:textColor="@color/yellow"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:layout_below="@+id/manTxt3">
                </TextView>
            </RelativeLayout>
            // 4page
            <RelativeLayout
                android:id="@+id/manual4"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/manPic4"
                    android:layout_width="700px"
                    android:layout_height="900px"
                    android:layout_centerInParent="true"
                    android:padding="10dp"
                    android:src="@drawable/menu_calendar"></ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/manTxt4"
                    android:fontFamily="@font/pf_stardustbold"
                    android:text="@string/manual_4"
                    android:textSize="18dp"
                    android:gravity="center"
                    android:layout_below="@+id/manPic4"
                    android:textColor="@color/white"
                    android:paddingBottom="10dp"></TextView>
            </RelativeLayout>

        </ViewFlipper> // manualContent 끝


        // manualView 앞뒤로 움직이기
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/manualView">
            <Button
                android:id="@+id/prevBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pf_stardustbold"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:text="Previous"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                >
            </Button>
            <Button
                android:id="@+id/nextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pf_stardustbold"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:text="Next"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                >
            </Button>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>